FEAT: IMplementação da funcionalidade de ebixir usuário, também implementação dos test e documentação
