# routes/api.php
@@ -8,6 +8,14 @@ use Illuminate\Support\Facades\Route;
 Route::group(['prefix' => '/v1'], function () {
     Route::controller( UserController::class)->group(function () {
         Route::post('/user', 'store');
+        Route::get('/user/{user}', 'show')->missing(function (Request $request) {
+            return response()->json([
+                'message' => 'Usuário não encontrado.',
+                'errors' => [
+                    'user' => ['Erro ao recuperar as informações do usuário.']
+                ]
+            ], 404);
+        });
     });
 
     Route::controller( AuthController::class)->group(function () {
